--- a/cppTest/cppTest.vcxproj
+++ b/cppTest/cppTest.vcxproj
@@ -127,7 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cppTest.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Operation.cpp" />
+    <ClCompile Include="Parameters.cpp" />
+    <ClCompile Include="Tools.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Operation.h" />
+    <ClInclude Include="Parameters.h" />
+    <ClInclude Include="Tools.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
